--- a/home.css
+++ b/home.css
@@ -25,3 +25,13 @@ header .headline{
   display: inline-block;
   margin: 0 20px;
 }
+footer{
+    width: 100%;
+    height: 100px;
+    background-color: #174a5c;
+    color: white;
+    text-align: center;
+}
+ul.footer-menu li {
+display: inline;
+}
