--- a/home.css
+++ b/home.css
@@ -43,7 +43,7 @@ header .headline{
   transition: .4s;
 }
 
-.btn-circle-stitch:hover {
+.fixed_btn:hover {
   background: #668ad8;
   box-shadow: 0px 0px 0px 5px #668ad8;
 }
