--- a/home.css
+++ b/home.css
@@ -28,6 +28,9 @@ header .headline{
 
 .fixed_btn {
   position: fixed;
+  bottom: 10px;
+  right: 10px;
+  padding: 6px 40px;
   display: inline-block;
   text-decoration: none;
   background: #87befd;
