--- a/huzakenna.css
+++ b/huzakenna.css
@@ -2,3 +2,21 @@ body {
 　　background-color: #de2f2f;
 　　color: #ffffff;
 }
+
+a.cp_btn {
+	position: relative;
+	display: block;
+	width: 160px;
+	padding: 0.8em;
+	text-align: center;
+	text-decoration: none;
+	color: #000000;
+	background: #ffffff;
+	border-bottom: 2px solid #d6d6d6;
+	border-radius: 4px;
+	box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
+}
+a.cp_btn:active {
+	border-bottom: 2px solid #26C6DA;
+	box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
+}
