--- a/huzakenna.css
+++ b/huzakenna.css
@@ -1,7 +1,7 @@
 body{
        /* 背景色指定 */
-    background-color:#10100E;
-    color:#cccccc;
+    background-color:#de2f2f;
+    color:#ffffff;
     }
 
 a.cp_btn {
