--- a/home_update3.css
+++ b/home_update3.css
@@ -62,7 +62,7 @@ header .headline{
 }
 .cp_navi #cp_sidenav a {
 	font-size: 20px;
-	position: absolute;
+	position: fixed;
 	left: -95px;
 	width: 110px;
 	height: 54px;
